# gcloud-yolo

./: README.md  pyproject.toml
sanmples/: understanding_artifacts.txt
src/gcloud_yolo/: cli.py
tinytools/: analyze_artifact.yaml  cais_tool.yaml  debug_container_workload.yaml  provenance_tool.yaml  sbom_tool.yaml
